# orby-devtools

./: MANIFEST.in  README.md  pyproject.toml
orby_devtools.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
orbydev/: __init__.py  cli.py  compiler.py  master.py  project.py  templates.py
orbydev/templates/default/: main.py  manifest.json
