[project.scripts]
orbydev = "orbydev.cli:main"

[build-system]
requires = ["setuptools>=65.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "orby-devtools"
version = "25.5.2"
description = "Tools for Orby applications development."
authors = [{name = "Wladisslaw Glebov", email = "your@email.com"}]
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3.10",
]
dependencies = [
    "click >=8.0",
    "pipreqs>=0.4.0"
]

[project.urls]
Homepage = "https://github.com/wladisslaw/orby-devtools"

[tool.setuptools]
include-package-data = true

[tool.setuptools.packages.find]
where = ["."]